# knot

./: .env.example  .gitignore  .knotignore.example  ALIAS_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPENDENCY_TESTING_REPORT.md  DEPLOYMENT.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PACKAGE_ALIAS_ARCHITECTURE.md  README.md  USAGE_EXAMPLES.md  VARIABLES_INTEGRATION_TEST_REPORT.md  YAML_INTERPOLATION_TEST_SUITE.md  dependency-schema.json  dependency-test-report.md  dependency-tests.md  docker-compose.yml  example-with-variables.yml  install.sh  integration-tests.py  knot.yml  nginx.conf  sample-knot-with-variables.yml  test_alias_example.json
apps/cli/: .gitignore  Cargo.toml  Dockerfile
apps/cli/src/: config.rs  downloader.rs  interpolation.rs  linker.rs  main.rs  project.rs  project_extensions.rs  utils.rs  validation.rs  variables.rs
apps/cli/tests/: basic_functionality_test.rs  comprehensive_ux_test.rs  error_message_quality_test.rs  input_validation_safety_test.rs  interactive_ui_test.rs  performance_regression_test.rs  ux_integration_test.rs  yaml_error_handling_test.rs  yaml_parsing_test.rs
apps/knot-cli/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  app.yml  install.sh
apps/knot-cli/example-package/: index.ts  package.yml
apps/knot-cli/example-project/: knot.yml  test.rs
apps/knot-cli/src/: commands.rs  commands_old.rs  config.rs  downloader.rs  ignore.rs  linker.rs  main.rs  project.rs  templates.rs  typescript.rs
apps/knot-space/: .dockerignore  .env.example  .eslintrc.json  .gitignore  BACKEND_SETUP.md  Cargo.toml  Dockerfile  RAILWAY_BUILD_ISSUE.md  RAILWAY_DEPLOYMENT.md  README.md  Rocket.toml  app.yml  bunfig.toml  docker-compose.dev.yml  package-lock.json  package.json  setup-db.sh  sqlx-data.json  start.sh  swagger.yaml  tsconfig.app.json  tsconfig.build.json  tsconfig.json
apps/knot-space/.sqlx/: query-01af8501c6759f26a265436518c94d38f6c28a258de8ffbf3e75a6619fd6b5b4.json  query-16ad55a1f362b622a04363f624e4dd8f6a85d898e15bded68a449e4a2a00106f.json  query-3adfc7542aa1ae7d95a55e02e43c1578331643153191557dfadf017bd83773ec.json  query-45fcd0837d85f5b6f63577e3bcae72db54923b2d005ae3076fca9ce2b05860f2.json  query-47f417e128cbfccb30da39e3fb050e38484664a9bca5374626b3dce6d7fe2e8b.json  query-49f69ea645dfcb4b97f2025380dd48a68f2f0cf50c996f42ec4728b8d9a8e3a8.json  query-placeholder.txt  (+20 more)
assets/: quickstart.tape  (+1 more)
(+376 files in other folders)
