[package]
name = "knot"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
symlink = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tar = "0.4"
flate2 = "1.0"
regex = "1.0"
dirs = "5.0"
inquire = "0.7"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
crossterm = "0.27"
urlencoding = "2.1"
tempfile = "3.0"
semver = { version = "1.0", features = ["serde"] }
async-trait = "0.1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[[bin]]
name = "knot"
path = "src/main.rs"
