[package]
name = "knot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
symlink = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tar = "0.4"
flate2 = "1.0"
regex = "1.0"
dirs = "5.0"

[[bin]]
name = "knot"
path = "src/main.rs"