[package]
name = "knot-space"
version = "0.1.0"
edition = "2021"
description = "Online repository server for Knot packages"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.1", features = ["sqlx_postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["multipart"] }
tar = "0.4"
flate2 = "1.0"
utoipa = { version = "4.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["rocket"] }
regex = "1.10"
sha2 = "0.10"
hex = "0.4"

[patch.crates-io]
base64ct = "1.6.0"
